# kitchen-aid

./: .envrc  Dockerfile  Makefile  README.md  RELEASE_NOTES  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: docker-build.yml  helm-lint.yml
deploy/kitchen-aid/: Chart.yaml  values.yaml
deploy/kitchen-aid/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/kitchen-aid/templates/tests/: test-connection.yaml
docs/: build.md  internals.md
hacks/: env-build.sh
kitchen_aid/: __main__.py
kitchen_aid/models/: command.py  engine.py  exceptions.py  interact.py
kitchen_aid/pkgs/commands/: get_web_page.py
kitchen_aid/pkgs/http/: http_requests.py
kitchen_aid/pkgs/interfaces/: api.py
resources/: dev-requirements.txt
resources/deployment/: prometheus.yaml
tests/: test_models_command.py  test_models_interact.py  test_pkgs_commands_get_web_page.py  test_pkgs_http_http_requests.py
