[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitchen-aid"
dynamic = ["version", "dependencies"]
authors = [
  { name="Dimitar Ivanov", email="dim.iv.ivanov@gmail.com" },
]
description = "Python template project"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = []

[project.urls]
Homepage = "https://github.com/mimiteto/kitchen-aid"
Issues = "https://github.com/mimiteto/kitchen-aid/issues"

[tool.hatch.version]
source = "code"
path = "kitchen-aid/__about__.py"

[tool.hatch.dependencies]
source = "code"
path = "kitchen-aid/__about__.py"
